{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 50,
  "lineage": "5d17bc2e-927f-3455-9c1d-fd70669b55a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "card-app-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:155721844411:internet-gateway/igw-001d6810db15a4257",
            "id": "igw-001d6810db15a4257",
            "owner_id": "155721844411",
            "tags": {
              "Name": "card-app-IG"
            },
            "tags_all": {
              "Name": "card-app-IG"
            },
            "vpc_id": "vpc-030480f41dc5272a7"
          },
          "dependencies": [
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "card-app-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:155721844411:loadbalancer/app/card-app-LB/70ed4d8fa8d7ea41",
            "arn_suffix": "app/card-app-LB/70ed4d8fa8d7ea41",
            "desync_mitigation_mode": "defensive",
            "dns_name": "card-app-LB-569541954.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:155721844411:loadbalancer/app/card-app-LB/70ed4d8fa8d7ea41",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "card-app-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0340ae05213fbe612"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c0dff7b56c5f3b3"
              },
              {
                "subnet_id": "subnet-0d74c78350cad98ca"
              }
            ],
            "subnets": [
              "subnet-00c0dff7b56c5f3b3",
              "subnet-0d74c78350cad98ca"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-030480f41dc5272a7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_SG",
            "aws_subnet.card-app-SN-1a",
            "aws_subnet.card-app-SN-1b",
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "card-app-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:155721844411:listener/app/card-app-LB/70ed4d8fa8d7ea41/acf497f0cff1fd05",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:155721844411:targetgroup/card-app-TG/441ad008539ff3ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:155721844411:listener/app/card-app-LB/70ed4d8fa8d7ea41/acf497f0cff1fd05",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:155721844411:loadbalancer/app/card-app-LB/70ed4d8fa8d7ea41",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.card-app-LB",
            "aws_lb_target_group.card-app-TG",
            "aws_security_group.allow_SG",
            "aws_subnet.card-app-SN-1a",
            "aws_subnet.card-app-SN-1b",
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "card-app-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:155721844411:targetgroup/card-app-TG/441ad008539ff3ea",
            "arn_suffix": "targetgroup/card-app-TG/441ad008539ff3ea",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:155721844411:targetgroup/card-app-TG/441ad008539ff3ea",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "card-app-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-030480f41dc5272a7"
          },
          "dependencies": [
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "card-app-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:155721844411:route-table/rtb-06c24fce69f474836",
            "id": "rtb-06c24fce69f474836",
            "owner_id": "155721844411",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001d6810db15a4257",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "card-app-RT"
            },
            "tags_all": {
              "Name": "card-app-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-030480f41dc5272a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.card-app-IG",
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "card-app-asso-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af3f4d27663601c1",
            "route_table_id": "rtb-06c24fce69f474836",
            "subnet_id": "subnet-00c0dff7b56c5f3b3"
          },
          "dependencies": [
            "aws_internet_gateway.card-app-IG",
            "aws_route_table.card-app-RT",
            "aws_subnet.card-app-SN-1a",
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-RT-asso-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3aeb7807a2a1dc8",
            "route_table_id": "rtb-06c24fce69f474836",
            "subnet_id": "subnet-0d74c78350cad98ca"
          },
          "dependencies": [
            "aws_internet_gateway.card-app-IG",
            "aws_route_table.card-app-RT",
            "aws_subnet.card-app-SN-1b",
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:155721844411:security-group/sg-0340ae05213fbe612",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0340ae05213fbe612",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SG",
            "name_prefix": "",
            "owner_id": "155721844411",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_SG"
            },
            "tags_all": {
              "Name": "allow_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-030480f41dc5272a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-app-SN-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:155721844411:subnet/subnet-00c0dff7b56c5f3b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c0dff7b56c5f3b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155721844411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "card-app-SN-1a"
            },
            "tags_all": {
              "Name": "card-app-SN-1a"
            },
            "vpc_id": "vpc-030480f41dc5272a7"
          },
          "dependencies": [
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-app-SN-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:155721844411:subnet/subnet-0d74c78350cad98ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d74c78350cad98ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155721844411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "card-app-SN-1b"
            },
            "tags_all": {
              "Name": "card-app-SN-1b"
            },
            "vpc_id": "vpc-030480f41dc5272a7"
          },
          "dependencies": [
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-app-SN-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:155721844411:subnet/subnet-01ca048e2362b48bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ca048e2362b48bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155721844411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "card-app-SN-1c"
            },
            "tags_all": {
              "Name": "card-app-SN-1c"
            },
            "vpc_id": "vpc-030480f41dc5272a7"
          },
          "dependencies": [
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "card-app-SN-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:155721844411:subnet/subnet-0a7496e7ed545a0b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7496e7ed545a0b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155721844411",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "card-app-SN-1d"
            },
            "tags_all": {
              "Name": "card-app-SN-1d"
            },
            "vpc_id": "vpc-030480f41dc5272a7"
          },
          "dependencies": [
            "aws_vpc.card-app-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "card-app-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:155721844411:vpc/vpc-030480f41dc5272a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0cd144b1cb28db403",
            "default_route_table_id": "rtb-0e61c73f5a875f8d9",
            "default_security_group_id": "sg-09dd2628265d26367",
            "dhcp_options_id": "dopt-0bcace252d280ac0a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-030480f41dc5272a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e61c73f5a875f8d9",
            "owner_id": "155721844411",
            "tags": {
              "Name": "card-app-vpc"
            },
            "tags_all": {
              "Name": "card-app-vpc"
            }
          }
        }
      ]
    }
  ]
}